--- a/src/Components/Post/post.css
+++ b/src/Components/Post/post.css
@@ -1,5 +1,6 @@
 .post {
     width:300px;
+    /* width: 385px; */
     display: flex;
     flex-direction: column;
     margin: 0 25px 40px 25px;
@@ -9,11 +10,45 @@
 .postImage {
     width:300px;
     border-radius: 7px;
+    object-fit: cover;
 }
 
 .postInfo {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+}
+
+.postcat {
+    font-size: 14px;
+    font-weight: 500;
+    color: #be9656;
+    line-height: 19px;
+    margin-right:10px;
+    margin-top:15px;
+    cursor: pointer;
+}
+
+.postTitle {
+    font-size: 18px;
+    font-weight: bold;
+    margin-top:15px;
+}
+
+.postTime {
+    font-style: italic;
+    font-size: 12px;
+    color: dimgrey;
+}
+
+.postdesc {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+    color: dimgrey;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
 }
