--- a/src/Components/sidebar/sidebar.css
+++ b/src/Components/sidebar/sidebar.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color:floralwhite;
+    /* background-color:floralwhite; */
     padding-bottom:20px;
     margin:20px;
 }
@@ -17,8 +17,8 @@
 }
 
 .sidebarItemTitle {
-    border-top: 2px solid #444;
-    border-bottom: 2px solid #444;
+    border-top: 2px solid #a7a4a4;
+    border-bottom: 2px solid #a7a4a4;
     margin: 8px;
     padding: 5px;
     width:80%;
@@ -31,8 +31,8 @@
 }
 
 .sideImage {
-    width:300px;
-    height:300px;
+    width:250px;
+    height:250px;
     margin-top:15px;
 }
 
@@ -40,7 +40,7 @@
 /* .sideText  */
 .sidebarItem > p {
     /* color:red; */
-    padding:35px;
+    padding:25px;
 }
 
 .sidebarList {
@@ -68,4 +68,5 @@
     margin:5px;
     color:#444;
     font-size: 30px;
+    cursor: pointer;
 }
