--- a/src/Components/topBar/topBar.css
+++ b/src/Components/topBar/topBar.css
@@ -47,8 +47,9 @@
 }
 
 .centerTopItem {
-    margin-right:10px;
+    margin-right:20px;
     font-size: 30px;
+    color:gray;
     /* font-weight: 300; */
     cursor: pointer;
 }
