--- a/src/Components/topBar/topBar.css
+++ b/src/Components/topBar/topBar.css
@@ -10,7 +10,7 @@
     position:sticky;
     top:0;
     font-family: "Josefin Sans", sans-serif;
-    /* z-index: 99; */
+    z-index: 999;
 }
 
 .leftTop, .rightTop {
